bookstore-chart/templates/fe/bookstore-fe-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bookstore-fe
    app.kubernetes.io/component: bookstore-fe
    app.kubernetes.io/instance: bookstore-fe
  name: bookstore-fe
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: bookstore-fe
    weight: 100
  wildcardPolicy: None
